--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 ########## datasource ##########
-spring.datasource.url=jdbc:mysql://localhost:3306/jmrtest?createDatabaseIfNotExist=true\
+spring.datasource.url=jdbc:mysql://localhost:3306/jmr1?createDatabaseIfNotExist=true\
   &serverTimezone=Asia/Shanghai
 spring.datasource.username=root
 spring.datasource.password=root
